--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -3,54 +3,54 @@
 body,
 html,
 #root {
-  height: 100%;
+	height: 100%;
 }
 
 html {
-  font-size: 18px;
+	font-size: 18px;
 }
 
 h1 {
-  padding: .77rem 0;
-  background-color: #010c3f;
-  text-align: center;
-  font-family: 'Monoton', 'Poppins', sans-serif;
-  font-size: 1.88rem;
-  color: #fff;
+	padding: .77rem 0;
+	background-color: #010c3f;
+	text-align: center;
+	font-family: 'Monoton', 'Poppins', sans-serif;
+	font-size: 1.88rem;
+	color: #fff;
 }
 
 h1 .highlight {
-  color: #6c41ec;
+	color: #6c41ec;
 }
 
 h2 {
-  font-family: 'Poppins', sans-serif;
-  font-size: 1.55rem;
+	font-family: 'Poppins', sans-serif;
+	font-size: 1.55rem;
 }
 
 .App {
-  height: 100%;
-  padding: 0 17% 10% 17%;
-  background-image: url('./guitar.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  font-family: 'Work Sans', sans-serif;
-  font-weight: 500;
-  color: #fff;
+	height: 100%;
+	padding: 0 17% 10% 17%;
+	background-image: url('./guitar.jpg');
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	font-family: 'Work Sans', sans-serif;
+	font-weight: 500;
+	color: #fff;
 }
 
 .App-playlist {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
 }
 
 @media only screen and (max-width: 1020px) {
-  .App-playlist {
-    align-items: center;
-    flex-direction: column;
-  }
+	.App-playlist {
+    	align-items: center;
+    	flex-direction: column;
+  	}
 }
 
 /* Nav Buttons */
@@ -134,6 +134,7 @@ h2 {
 	background-color: white;
 	width: 500px;
 	max-width: 80%;
+	color: black;
 }
 
 .modal.active {
@@ -151,12 +152,13 @@ h2 {
 	border-top-right-radius: 10px;
 	font-size: 16px;
 	font-family: 'Rock Salt', cursive;
+	color: black;
 }
 
 .modal-header .title {
 	font-size: 1.25rem;
 	font-weight: bold;
-	color: white;
+	color: black;
 }
 
 .modal-header .close-button {
@@ -168,7 +170,7 @@ h2 {
 	height: 28px;
 	width: 28px;
 	border: none;
-	color: white;
+	color: black;
 }
 
 .modal-header .close-button:hover {
@@ -214,3 +216,72 @@ h2 {
 	margin: 40px auto;
 	text-align: center;
 }
+
+/* New Modal */
+
+body {
+	/* font-family: "Montserrat"; */
+}
+
+section {
+	min-height: 100vh;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: aliceblue;
+}
+
+.container {
+	max-width: 400px;
+	width: 90%;
+	padding: 20px;
+	box-shadow: 0px 0px 20px #00000020;
+	border-radius: 8px;
+	background-color: white;
+}
+
+.step {
+	display: none;
+}
+
+.step.active {
+	display: block;
+}
+
+.form-group {
+	width: 100%;
+	margin-top: 20px;
+}
+
+.form-group input {
+	width: 100%;
+	border: 1.5px solid rgba(128, 128, 128, 0.418);
+	padding: 5px;
+	font-size: 18px;
+	margin-top: 5px;
+	border-radius: 4px;
+}
+
+button.next-btn,
+button.previous-btn,
+button.submit-btn {
+	float: right;
+	margin-top: 20px;
+	padding: 10px 30px;
+	border: none;
+	outline: none;
+	background-color: rgb(180, 220, 255);
+	font-family: "Montserrat";
+	font-size: 18px;
+	cursor: pointer;
+	/* text-align: right; */
+}
+
+button.previous-btn {
+	float: left;
+}
+
+button.submit-btn {
+	background-color: aquamarine;
+}  
