--- a/src/Components/Playlist/Playlist.css
+++ b/src/Components/Playlist/Playlist.css
@@ -43,6 +43,58 @@
     /* background-color: rgba(108, 65, 233, .7); */
     background-color: hsla(60, 60%, 40%, 1);
   }
+
+  .Playlist-nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 10px;
+    /* border: 1px solid black; */
+
+
+    /* background-color: blue; */
+
+    width: 10rem;
+
+    /* width: 8.3rem;
+    padding: .77rem 0;
+    border-radius: 54px;
+    border-width: 0px;
+    margin-top: 1.27rem;
+    
+    background-color: hsla(60, 50%, 50%, 1);
+
+    text-align: center;
+    font-size: .83rem;
+    transition: background-color .25s;
+    color: #fff;
+    font-weight: 500; */
+
+    /* background-color: #6c41ec; */
+    
+  }
+
+  .Playlist-nav h2 {
+    font-size: .83rem;
+  }
+
+  .fa-icons {
+    width: 3rem;
+    height: auto;
+    border-radius: 50%;
+    cursor: pointer;
+    /* color: purple;
+    background-color: blue; */
+  }
+
+  .fa-icons:hover {
+    background-color: hsla(60, 50%, 50%, 1);
+    /* background-color: red; */
+  }
+
+  .fa-icons:active {
+    background-color: none;
+  }
   
   ::-webkit-scrollbar {
       width: 0px;
